--- a/tax_invoice/view/tax_invoice_action.xml
+++ b/tax_invoice/view/tax_invoice_action.xml
@@ -14,5 +14,16 @@
             </field>
         </record>
 
+        <record id="tax_invoice_line_action" model="ir.actions.act_window">
+            <field name="name">进项发票明细</field>
+            <field name="res_model">tax.invoice.line</field>
+            <field name="view_mode">tree,form</field>
+            <field name="help" type="html">
+              <p class="oe_view_nocontent_create">
+                进项发票明细
+              </p>
+            </field>
+        </record>
+
 	</data>
 </openerp>
