--- a/tax_invoice/view/tax_invoice_menu.xml
+++ b/tax_invoice/view/tax_invoice_menu.xml
@@ -4,5 +4,7 @@
         <!-- 菜单加入税务模块 -->
         <menuitem id="menu_tax_invoice" name='进项发票' action="tax_invoice_action"
             parent="tax.tax_accounting" sequence="0"/>
+        <menuitem id="menu_tax_invoice_line" name='进项发票明细' action="tax_invoice_line_action"
+            parent="tax.tax_accounting" sequence="2"/>
 	</data>
 </openerp>
