--- a/tax/view/tax_config_menu.xml
+++ b/tax/view/tax_config_menu.xml
@@ -4,13 +4,13 @@
         <!--根菜单-->
 		<menuitem id='tax_menu' name='涉税会计'  web_icon="tax,static/description/tax.png"/>
 		<menuitem id='tax_accounting' name='基本业务' parent='tax_menu' sequence='10'/>
-        <menuitem id='country_tax_updata' name='国税上报' parent='tax_menu' sequence='20'/>
-        <menuitem id='province_tax_updata' name='地税上报' parent='tax_menu' sequence='30'/>
+        <menuitem id='country_tax_updata' name='地税上报' parent='tax_menu' sequence='20'/>
+        <menuitem id='province_tax_updata' name='国税上报' parent='tax_menu' sequence='30'/>
         <menuitem id='tax_config_menu' name='基本设置' parent='tax_menu' sequence='40'/>
         <!-- 基础设置 -->
-        <menuitem id="menu_config_country" name='国税设置' action="config_country_action"
+        <menuitem id="menu_config_country" name='地税设置' action="config_country_action"
             parent="tax_config_menu" sequence="0"/>
-        <menuitem id="menu_config_province" name='地税设置' action="config_province_action"
+        <menuitem id="menu_config_province" name='国税设置' action="config_province_action"
             parent="tax_config_menu" sequence="1"/>
 	</data>
 </openerp>
