--- a/tax/view/tax_config_view.xml
+++ b/tax/view/tax_config_view.xml
@@ -2,73 +2,23 @@
 <openerp>
 	<data>
 
-		<!--国税设置tree-->
+		<!--地税设置tree-->
         <record id='config_country_tree' model='ir.ui.view'>
 			<field name='name'>config.country.tree</field>
 			<field name='model'>config.country</field>
 			<field name='arch' type='xml'>
-				<tree string='国税设置'>
-                    <field name='name'/>
-                    <field name='password'/>
-                    <field name='vpdn_name'/>
-                    <field name='vpdn_password'/>
-                    <field name='billing_password'/>
-				</tree>
-			</field>
-		</record>
-
-        <!--国税设置form-->
-		<record id='config_country_form' model='ir.ui.view'>
-			<field name='name'>config.country.form</field>
-			<field name='model'>config.country</field>
-			<field name='arch' type='xml'>
-                <form string="国税设置">
-			    	<sheet>
-                        <group>
-                            <group>
-                                <field name='name'/>
-                                <field name="vpdn_name"/>
-							</group>
-                            <group>
-                                <field name='password'/>
-                                <field name="vpdn_password"/>
-							</group>
-                            <group>
-                                <field name='billing_password'/>
-							</group>
-                        </group>
-                        <notebook>
-                            <page string="申报明细行">
-                                <field name="line_ids">
-                                     <tree string="申报明细行" editable="bottom">
-                                         <field name="name"/>
-                                         <field name="category_id"/>
-                                     </tree>
-                                </field>
-                            </page>
-                        </notebook>
-                    </sheet>
-                </form>
-			</field>
-		</record>
-
-        <!--地税设置tree-->
-        <record id='config_province_tree' model='ir.ui.view'>
-			<field name='name'>config.province.tree</field>
-			<field name='model'>config.province</field>
-			<field name='arch' type='xml'>
 				<tree string='地税设置'>
                     <field name='name'/>
                     <field name='password'/>
-                    <field name='tel'/>
+                    <field name='tel_number'/>
 				</tree>
 			</field>
 		</record>
 
-		<!--地税设置form-->
-		<record id='config_province_form' model='ir.ui.view'>
-			<field name='name'>config.province.form</field>
-			<field name='model'>config.province</field>
+        <!--地税设置form-->
+		<record id='config_country_form' model='ir.ui.view'>
+			<field name='name'>config.country.form</field>
+			<field name='model'>config.country</field>
 			<field name='arch' type='xml'>
                 <form string="地税设置">
 			    	<sheet>
@@ -77,17 +27,59 @@
                                 <field name='name'/>
                                 <field name="password"/>
 							</group>
-							<group>
-                                <field name="tel"/>
-                                <field name="province_url"/>
-                            </group>
+                            <group>
+                                <field name='tel_number'/>
+							</group>
+                        </group>
+                    </sheet>
+                </form>
+			</field>
+		</record>
+
+        <!--国税设置tree-->
+        <record id='config_province_tree' model='ir.ui.view'>
+			<field name='name'>config.province.tree</field>
+			<field name='model'>config.province</field>
+			<field name='arch' type='xml'>
+				<tree string='国税设置'>
+                    <field name='name'/>
+                    <field name='company_name'/>
+				</tree>
+			</field>
+		</record>
+
+		<!--国税设置form-->
+		<record id='config_province_form' model='ir.ui.view'>
+			<field name='name'>config.province.form</field>
+			<field name='model'>config.province</field>
+			<field name='arch' type='xml'>
+                <form string="国税设置">
+			    	<sheet>
+                        <group>
+                            <group>
+                                <field name='name'/>
+                                <field name='company_name'/>
+                                <field name="password"/>
+							</group>
                         </group>
                         <notebook>
-                            <page string="申报明细行">
-                                <field name="line_ids">
-                                     <tree string="申报明细行" editable="bottom">
-                                         <field name="name"/>
-                                         <field name="add_url"/>
+                            <page string="资产负债表对应关系">
+                                <field name="balance_lins">
+                                     <tree string="资产负债表对应关系" editable="bottom">
+                                         <field name="update_name"/>
+                                         <field name="excel_ncows"/>
+                                         <field name="excel_ncols"/>
+                                     </tree>
+                                </field>
+                            </page>
+                        </notebook>
+                        <notebook>
+                            <page string="利润表对应关系">
+                                <field name="profit_lins">
+                                     <tree string="利润表对应关系" editable="bottom">
+                                         <field name="update_name"/>
+                                         <field name="excel_ncows"/>
+                                         <field name="excel_ncols"/>
                                      </tree>
                                 </field>
                             </page>
