--- a/tax_invoice/view/tax_invoice_action.xml
+++ b/tax_invoice/view/tax_invoice_action.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0"  encoding="utf-8"?>
 <openerp>
     <data>
         <!-- 服务管理 action -->
@@ -15,13 +15,18 @@
         </record>
 
         <record id="tax_invoice_line_action" model="ir.actions.act_window">
-            <field name="name">进项发票明细</field>
+            <field name="name">进项明细发票</field>
             <field name="res_model">tax.invoice.line</field>
             <field name="view_mode">tree,form</field>
+            <field name="context">{'search_default_user_id':1}</field>
+            <field name="search_view_id" ref="tax_invoice_line_search_filter"/>
             <field name="help" type="html">
-              <p class="oe_view_nocontent_create">
-                进项发票明细
-              </p>
+                <p class="oe_view_nocontent_create">
+                    <!-- Add Text Here -->
+                </p>
+                <p>
+                    <!-- More details about what a user can do -->
+                </p>
             </field>
         </record>
 
