--- a/tax_invoice/view/tax_invoice_menu.xml
+++ b/tax_invoice/view/tax_invoice_menu.xml
@@ -1,10 +1,11 @@
-<?xml version="1.0"?>
+<?xml version="1.0"  encoding="utf-8"?>
 <openerp>
     <data>
         <!-- 菜单加入税务模块 -->
         <menuitem id="menu_tax_invoice" name='进项发票' action="tax_invoice_action"
             parent="tax.tax_accounting" sequence="0"/>
-        <menuitem id="menu_tax_invoice_line" name='进项发票明细' action="tax_invoice_line_action"
-            parent="tax.tax_accounting" sequence="2"/>
-	</data>
+	
+        <menuitem id="menu_invoice_line" name="进项明细发票" parent="tax.tax_accounting"
+            action="tax_invoice_line_action" sequence="1"/>
+    </data>
 </openerp>
