--- a/tax_invoice/view/tax_invoice_view.xml
+++ b/tax_invoice/view/tax_invoice_view.xml
@@ -28,8 +28,18 @@
 	                    <field name="state" widget="statusbar" readonly="1"/>
 	                </header>
 			    	<sheet>
+                        <div class="oe_button_box" name="button_box">
+                                <button type="object"
+                                        string="引入excel"
+                                        name="button_excel"
+                                        class="oe_stat_button"
+                                        icon="fa-list-alt">
+                                </button>
+                        </div>
 						<group>
 							<field name="name"/>
+                        </group>
+                        <group>
                             <field name="tax_amount"/>
                         </group>
                         <notebook>
@@ -82,6 +92,7 @@
         </record>
 
         <!-- 引入excel action -->
+
         <record id="create_invoice_line_form" model="ir.ui.view">
             <field name="name">create_invoice_line_form</field>
             <field name="model">create.invoice.line.wizard</field>
@@ -98,6 +109,7 @@
             	</form>
             </field>
         </record>
+
         <act_window id="create_invoice_line_action"
             name="引入excel"
             src_model="tax.invoice"
