--- a/tax/view/tax_config_action.xml
+++ b/tax/view/tax_config_action.xml
@@ -8,6 +8,12 @@
             <field name="view_mode">tree,form</field>
         </record>
 
+        <record id="tax_category_action" model="ir.actions.act_window">
+            <field name="name">税率设置</field>
+            <field name="res_model">tax.category</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
         <record id="config_province_action" model="ir.actions.act_window">
             <field name="name">国税设置</field>
             <field name="res_model">config.province</field>
