--- a/tax/view/tax_config_menu.xml
+++ b/tax/view/tax_config_menu.xml
@@ -10,6 +10,8 @@
         <!-- 基础设置 -->
         <menuitem id="menu_config_country" name='地税设置' action="config_country_action"
             parent="tax_config_menu" sequence="0"/>
+        <menuitem id="menu_tax_category" name='税率设置' action="tax_category_action"
+            parent="tax_config_menu" sequence="0"/>
         <menuitem id="menu_config_province" name='国税设置' action="config_province_action"
             parent="tax_config_menu" sequence="1"/>
         <menuitem id="menu_automatic_cost" name='费用自动化基础' action="automatic_cost_action"
